Upgrade to Bootstrap 5 with modern UI design

--- a/index.html
+++ b/index.html
@@ -4,103 +4,226 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NSW 운전면허 문제은행</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>NSW Driver Knowledge Test</h1>
-      <p class="subtitle">운전면허 필기시험 문제은행</p>
+  <div class="container py-4">
+    <!-- Header -->
+    <header class="text-center mb-5">
+      <div class="d-flex justify-content-center align-items-center gap-3 mb-3">
+        <i class="bi bi-car-front-fill display-4 text-primary"></i>
+        <h1 class="display-5 fw-bold mb-0">NSW Driver Knowledge Test</h1>
+      </div>
+      <p class="lead text-muted">호주 NSW 운전면허 필기시험 문제은행</p>
+      <div class="badge bg-info fs-6">
+        <i class="bi bi-collection me-1"></i>
+        총 <span id="total-count">0</span>개 문제
+      </div>
     </header>
 
     <!-- Start Screen -->
     <div id="start-screen" class="screen active">
-      <div class="card">
-        <h2>시험 모드 선택</h2>
-        <div class="mode-selection">
-          <button id="practice-mode" class="btn btn-primary">
-            <span class="btn-icon">📚</span>
-            <span class="btn-text">연습 모드</span>
-            <span class="btn-desc">카테고리별 학습</span>
-          </button>
-          <button id="test-mode" class="btn btn-primary">
-            <span class="btn-icon">📝</span>
-            <span class="btn-text">시험 모드</span>
-            <span class="btn-desc">45문제 랜덤 출제</span>
-          </button>
+      <!-- Mode Selection -->
+      <div class="card shadow-lg border-0 mb-4">
+        <div class="card-header bg-primary text-white">
+          <h5 class="mb-0"><i class="bi bi-controller me-2"></i>시험 모드 선택</h5>
+        </div>
+        <div class="card-body p-4">
+          <div class="row g-4">
+            <div class="col-md-6">
+              <div id="practice-mode" class="mode-card h-100 p-4 rounded-4 text-center" role="button">
+                <i class="bi bi-book display-1 text-primary mb-3"></i>
+                <h4 class="fw-bold">연습 모드</h4>
+                <p class="text-muted mb-3">원하는 카테고리를 선택해서 집중 학습</p>
+                <span class="badge bg-primary-subtle text-primary">자유 학습</span>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div id="test-mode" class="mode-card h-100 p-4 rounded-4 text-center" role="button">
+                <i class="bi bi-clipboard-check display-1 text-success mb-3"></i>
+                <h4 class="fw-bold">시험 모드</h4>
+                <p class="text-muted mb-3">실제 시험처럼 45문제 랜덤 출제</p>
+                <span class="badge bg-success-subtle text-success">합격 기준 75%</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div class="card" id="category-selection" style="display: none;">
-        <h2>카테고리 선택</h2>
-        <div id="category-buttons" class="category-grid"></div>
-        <button id="start-practice" class="btn btn-success" disabled>학습 시작</button>
+      <!-- Category Selection -->
+      <div class="card shadow-lg border-0" id="category-selection" style="display: none;">
+        <div class="card-header bg-secondary text-white d-flex justify-content-between align-items-center">
+          <h5 class="mb-0"><i class="bi bi-grid me-2"></i>카테고리 선택</h5>
+          <button id="select-all-btn" class="btn btn-sm btn-light">
+            <i class="bi bi-check-all me-1"></i>전체 선택
+          </button>
+        </div>
+        <div class="card-body p-4">
+          <div id="category-buttons" class="row g-3 mb-4"></div>
+          <div class="d-grid">
+            <button id="start-practice" class="btn btn-success btn-lg" disabled>
+              <i class="bi bi-play-fill me-2"></i>학습 시작
+              <span id="selected-count" class="badge bg-light text-success ms-2">0개 선택</span>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
 
     <!-- Quiz Screen -->
     <div id="quiz-screen" class="screen">
-      <div class="quiz-header">
-        <div class="progress-info">
-          <span id="question-counter">1 / 10</span>
-          <span id="score-display">점수: 0</span>
-        </div>
-        <div class="progress-bar">
-          <div id="progress" class="progress-fill"></div>
+      <!-- Progress Header -->
+      <div class="card shadow-sm border-0 mb-4">
+        <div class="card-body py-3">
+          <div class="d-flex justify-content-between align-items-center mb-2">
+            <div class="d-flex align-items-center gap-3">
+              <span class="badge bg-primary fs-6">
+                <i class="bi bi-question-circle me-1"></i>
+                <span id="question-counter">1 / 10</span>
+              </span>
+              <span id="question-category" class="badge bg-info fs-6"></span>
+            </div>
+            <div class="d-flex align-items-center gap-3">
+              <span class="text-success fw-bold">
+                <i class="bi bi-check-circle me-1"></i>
+                <span id="correct-count">0</span>
+              </span>
+              <span class="text-danger fw-bold">
+                <i class="bi bi-x-circle me-1"></i>
+                <span id="wrong-count">0</span>
+              </span>
+            </div>
+          </div>
+          <div class="progress" style="height: 8px;">
+            <div id="progress" class="progress-bar bg-primary progress-bar-striped progress-bar-animated" style="width: 0%"></div>
+          </div>
         </div>
       </div>
 
-      <div class="card question-card">
-        <div class="question-meta">
-          <span id="question-id" class="question-id"></span>
-          <span id="question-category" class="question-category"></span>
+      <!-- Question Card -->
+      <div class="card shadow-lg border-0 mb-4">
+        <div class="card-header bg-light d-flex justify-content-between align-items-center">
+          <span id="question-id" class="badge bg-secondary"></span>
+          <button id="bookmark-btn" class="btn btn-sm btn-outline-warning">
+            <i class="bi bi-bookmark"></i>
+          </button>
         </div>
-        <h3 id="question-text" class="question-text"></h3>
-        <div id="options-container" class="options-container"></div>
+        <div class="card-body p-4">
+          <h4 id="question-text" class="card-title mb-4 lh-lg"></h4>
+          <div id="options-container" class="d-grid gap-3"></div>
+        </div>
+        <div class="card-footer bg-transparent border-0 p-3">
+          <div id="answer-feedback" class="alert d-none mb-0" role="alert"></div>
+        </div>
       </div>
 
-      <div class="quiz-actions">
-        <button id="next-btn" class="btn btn-primary" disabled>다음 문제</button>
-        <button id="quit-btn" class="btn btn-secondary">나가기</button>
+      <!-- Quiz Actions -->
+      <div class="d-flex gap-3 justify-content-center">
+        <button id="next-btn" class="btn btn-primary btn-lg px-5" disabled>
+          다음 문제 <i class="bi bi-arrow-right ms-2"></i>
+        </button>
+        <button id="quit-btn" class="btn btn-outline-secondary btn-lg">
+          <i class="bi bi-box-arrow-left me-2"></i>나가기
+        </button>
       </div>
     </div>
 
     <!-- Result Screen -->
     <div id="result-screen" class="screen">
-      <div class="card result-card">
-        <h2>시험 결과</h2>
-        <div class="result-score">
-          <span id="final-score" class="score-number">0</span>
-          <span class="score-total">/ <span id="total-questions">45</span></span>
-        </div>
-        <div id="result-message" class="result-message"></div>
-        <div class="result-stats">
-          <div class="stat">
-            <span class="stat-label">정답률</span>
-            <span id="accuracy" class="stat-value">0%</span>
+      <div class="card shadow-lg border-0 text-center">
+        <div class="card-body p-5">
+          <div id="result-icon" class="display-1 mb-4"></div>
+          <h2 id="result-title" class="display-6 fw-bold mb-4"></h2>
+
+          <div class="row justify-content-center mb-4">
+            <div class="col-auto">
+              <div class="display-1 fw-bold text-primary" id="final-score">0</div>
+              <div class="text-muted">/ <span id="total-questions">45</span> 문제</div>
+            </div>
           </div>
-          <div class="stat">
-            <span class="stat-label">합격 기준</span>
-            <span class="stat-value">75%</span>
+
+          <div class="row g-4 justify-content-center mb-5">
+            <div class="col-6 col-md-3">
+              <div class="card bg-light border-0">
+                <div class="card-body">
+                  <div class="fs-3 fw-bold text-primary" id="accuracy">0%</div>
+                  <div class="small text-muted">정답률</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-md-3">
+              <div class="card bg-light border-0">
+                <div class="card-body">
+                  <div class="fs-3 fw-bold text-success" id="correct-total">0</div>
+                  <div class="small text-muted">정답</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-md-3">
+              <div class="card bg-light border-0">
+                <div class="card-body">
+                  <div class="fs-3 fw-bold text-danger" id="wrong-total">0</div>
+                  <div class="small text-muted">오답</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-md-3">
+              <div class="card bg-light border-0">
+                <div class="card-body">
+                  <div class="fs-3 fw-bold text-info">75%</div>
+                  <div class="small text-muted">합격 기준</div>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="result-actions">
-          <button id="review-btn" class="btn btn-secondary">오답 확인</button>
-          <button id="restart-btn" class="btn btn-primary">다시 시작</button>
+
+          <div class="d-flex gap-3 justify-content-center flex-wrap">
+            <button id="review-btn" class="btn btn-warning btn-lg">
+              <i class="bi bi-journal-text me-2"></i>오답 확인
+            </button>
+            <button id="restart-btn" class="btn btn-primary btn-lg">
+              <i class="bi bi-arrow-repeat me-2"></i>다시 시작
+            </button>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- Review Screen -->
     <div id="review-screen" class="screen">
-      <div class="card">
-        <h2>오답 노트</h2>
-        <div id="review-container"></div>
-        <button id="back-to-result" class="btn btn-primary">결과로 돌아가기</button>
+      <div class="card shadow-lg border-0">
+        <div class="card-header bg-warning text-dark d-flex justify-content-between align-items-center">
+          <h5 class="mb-0"><i class="bi bi-journal-x me-2"></i>오답 노트</h5>
+          <span class="badge bg-dark" id="wrong-count-badge">0개</span>
+        </div>
+        <div class="card-body p-4">
+          <div id="review-container" class="review-list"></div>
+        </div>
+        <div class="card-footer bg-transparent p-3">
+          <button id="back-to-result" class="btn btn-primary w-100">
+            <i class="bi bi-arrow-left me-2"></i>결과로 돌아가기
+          </button>
+        </div>
       </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="text-center mt-5 py-4 text-muted">
+      <small>
+        <i class="bi bi-github me-1"></i>
+        NSW Driver Knowledge Test Practice
+      </small>
+    </footer>
   </div>
 
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="questions.js"></script>
   <script src="app.js"></script>
 </body>
